kubernetes/apps/observability/kube-prometheus-stack/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: "ingress-from-prometheus"
spec:
  description: "Allow ingress for Prometheus scraping, no port restrictions"
  endpointSelector:
    matchLabels:
      ingress.home.arpa/prometheus: allow
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: kube-prometheus-stack
            app.kubernetes.io/name: prometheus
